--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+    font-family: 'Press Start 2P', cursive;
     background-color: rgb(252, 244, 230);
 }
 
@@ -12,7 +13,6 @@ body {
 }
 
 .nav-link {
-    font-family: 'Press Start 2P', cursive;
     color: white;
 }
 
@@ -27,12 +27,8 @@ body {
     margin-top: 50px;
 }
 
-#loading-canvas {
-    position: relative;
-}
-
 .drop {
-    position: absolute;
+    position: fixed;
     width: 35px;
     height: 35px;
     background-color: orange;
@@ -69,7 +65,7 @@ body {
 #loading {
     margin-top: 100px;
     font-family: 'Press Start 2P', cursive;
-    font-size: 2.5rem;
+    font-size: 2.5em;
 }
 
 .clear {
@@ -81,10 +77,22 @@ body {
     justify-content: center;
     text-align: center;
     margin-top: 50px;
+}
+
+#outer-orange-box {
+    width: 280px;
+    height: 250px;
+    position: fixed;
+}
+
+#orange-box {
+    width: 100%;
+    height: 100%;
     position: relative;
 }
 
 .orange {
+    position: absolute;
     background: orange;
     width: 40px;
     height: 40px;
@@ -110,20 +118,18 @@ body {
 }
 
 .o-one {
-    position: absolute;
-    top: 42%;
-    left: 53%;
+    top: 25px;
+    left: 60px;
 }
 
 .o-two {
-    position: absolute;
-    top: 45%;
-    left: 41%;
+    top: 160px;
+    left: 10px;
 }
 
 .o-three {
-    position: absolute;
-    top: 20%;
+    top: 125px;
+    left: 215px;
 }
 
 #tree-svg:active {
@@ -138,4 +144,10 @@ body {
     30% { transform: rotate(1deg); }
     40% { transform: rotate(-1deg); }
     50% { transform: rotate(1deg); }
+}
+
+#welcome {
+    text-align: center;
+    margin-top: 35px;
+    font-size: 1.5em;
 }
