--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,9 @@ nav {
     display: flex;
     justify-content: center;
     text-align: center;
-    margin-top: 50px;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 .drop {
@@ -88,7 +90,7 @@ nav {
     font-size: 2.5em;
 }
 
-.clear {
+#main {
     display: none;
 }
 
@@ -211,18 +213,35 @@ nav {
 }
 
 #game-canvas-container {
-    border: 2px solid black;
     width: 100%;
     height: 300px;
     bottom: 30px;
     position: absolute;
 }
 
+#game-canvas {
+    width: 100%;
+    height: 100%;
+}
 
 footer {
     background-color: rgb(251, 200, 107);
     width: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+#footer-name {
+    padding: 5px;
+}
+
+#footer-links {
+    padding: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
 }
