--- a/src/about.css
+++ b/src/about.css
@@ -29,7 +29,7 @@ a {
 }
 
 /* Mobile */
-@media (min-width:480px) {
+@media (max-width: 600px) {
     #about-title {
         margin-top: 15px;
         text-align: center;
